# avs

lab1/: script
lab2/: CMakeLists.txt  buildGraph  main.cpp  result.csv  script
lab2/graph/: script.plt
